# react-native-turbo-nitro-javascript-benchmark

./: .gitignore  .gitmodules  App.tsx  CHANGELOG.md  README.md  app.json  package.json  tsconfig.json
android/: gradlew.bat  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/orca/rnmodulesbenchmark/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: NativeSampleModuleProvider.h  NitroLogbook.mm  Podfile
ios/rnmodulesbenchmark/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  big.zstd  small.zstd
ios/rnmodulesbenchmark.xcodeproj/: project.pbxproj
ios/rnmodulesbenchmark.xcodeproj/xcshareddata/xcschemes/: rnmodulesbenchmark.xcscheme
ios/rnmodulesbenchmark.xcworkspace/: contents.xcworkspacedata
modules/cpp/: CMakeLists.txt  compression.hpp  logbook.cpp  logbook.h
modules/nitro/: .gitignore  CMakeLists.txt  Logbook.nitro.ts  nitro.json
modules/nitro/android/: NitroLogbook.gradle  NitroLogbookOnLoad.cpp  NitroLogbookOnLoad.hpp  build.gradle
modules/nitro/android/kotlin/com/margelo/nitro/logbook/: NitroLogbookOnLoad.kt
modules/nitro/ios/: NitroLogbook+autolinking.rb  NitroLogbook-Swift-Cxx-Bridge.cpp  NitroLogbook-Swift-Cxx-Bridge.hpp  NitroLogbook-Swift-Cxx-Umbrella.hpp  NitroLogbookAutolinking.mm  NitroLogbookAutolinking.swift
modules/nitro/ios/c++/: HybridLogbookSpecSwift.cpp  HybridLogbookSpecSwift.hpp
modules/nitro/ios/swift/: HybridLogbookSpec.swift  HybridLogbookSpec_cxx.swift
modules/nitro/shared/c++/: HybridLogbook.hpp  HybridLogbookSpec.cpp  HybridLogbookSpec.hpp  HybridMathSpec.cpp  HybridMathSpec.hpp
modules/turbo/: CMakeLists.txt
modules/turbo/cpp/: NativeSampleModule.cpp  NativeSampleModule.h
modules/turbo/specs/: NativeSampleModule.ts
scripts/: generate_test_data.py
utils/: logbook.ts  measure.ts  theme.ts
